test/bad/scope.spkt.expected
Error at test/bad/scope.spkt:17.3: Variable `d` not declared.
